# bot

argparse/: pyproject.toml
argparse/src/cli/: cli.py
cli/: setup.py  uninstall.sh
dockercli/: dockerfile  pyproject.toml  setup.py
dockercli/src/cli/: __main__.py
dockerpoetrycli/: .gitignore  docker-compose.yml
dockerpoetrycli/src/cli/: __init__.py
trade/: .dockerignore  .gitignore  docker-compose.yml  dockerfile  pyproject.toml  python_developer_task.md
trade/src/: bot.py  main.py  worker.py
trade/src/enum/: state.py
trade/src/trade/: __init__.py  __main__.py  cli.py  constants.py  main.py
trade/src/trade/command/: __init__.py  arguments.py  cli.py  config_commands.py  dir_commands.py  start_commands.py
trade/src/trade/config/: dir_ops.py
trade/src/trade/templates/: base_config.json.j2
trade/src/trade/templates/exchanges/: binance.j2  generic.j2
trade/src/trade/util/: __init__.py  template_renderer.py
trade/trade/: __init__.py  __main__.py  cli.py  worker.py
youtube/: .dockerignore  .env.example  .gitignore  docker-compose.yml  dockerfile  makefile  pyproject.toml
youtube/src/: main.py
youtube/src/core/: config.py  util.py
youtube/src/service/: bot.py  proxy.py  view_bot.py
