[tool.poetry]
name = "argparse"
version = "0.0.1"
description = ""
authors = ["Roman <iamromandev@gmail.com>"]
readme = "README.md"
packages = [{include = "cli", from = "src"}]

[tool.poetry.scripts]
argparse = "cli.cli:cli"

[tool.poetry.dependencies]
python = "3.11.4"
arrow = "1.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
