[tool.poetry]
name = "cli"
version = "0.0.1"
description = ""
authors = ["Roman <iamromandev@gmail.com>"]
readme = "README.md"
packages = [{include = "cli", from = "src"}]

[tool.poetry.scripts]
cli = "cli.__main__:main"

[tool.poetry.dependencies]
python = "3.11.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
