[tool.poetry]
name = "trade"
version = "0.0.1"
description = ""
authors = ["Roman <iamromandev@gmail.com>"]
readme = "README.md"
packages = [{include = "trade", from = "src"}]

[tool.poetry.scripts]
trade = "trade.main:main"

[tool.poetry.dependencies]
python = "3.11.4"
loguru = "0.7.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
