[tool.poetry]
name = "youtube"
version = "0.0.1"
description = ""
authors = ["Roman <iamromandev@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.4"
loguru = "0.7.0"
uvicorn = "0.23.1"
fastapi = { extras = ["all"], version = "0.96.0" }
pydantic = { extras = ["all"], version = "1.10.12" }
sqlmodel = "0.0.8"
psycopg2-binary = "2.9.6"

[tool.poetry.group.dev.dependencies]
pylint = "2.17.5"
mypy = "1.4.1"
black = "23.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
